# ffmpeg_learn

./: CMakeLists.txt  main.cpp
